src/objects/Apttus__CycleTimeFieldData__c.object
<CustomObject>
    <description>Holds the data captured on fields for cycle time reporting</description>
    <fields>
        <fullName>Apttus__After__c</fullName>
        <description>The field value after the modification</description>
        <label>After</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <description>The agreement associated with the field</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Cycle Time Field Data</relationshipLabel>
        <relationshipName>Cycle_Time_Field_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Before__c</fullName>
        <description>The field value before the modification</description>
        <label>Before</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Begin_Datetime__c</fullName>
        <description>The datetime when the field acquired the before value</description>
        <label>Begin Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Cycle_Time_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field associated with the cycle time data</description>
        <label>Cycle Time Field</label>
        <referenceTo>Apttus__CycleTimeField__c</referenceTo>
        <relationshipLabel>Cycle Time Field Data</relationshipLabel>
        <relationshipName>Cycle_Time_Field_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Duration_Business_Hours__c</fullName>
        <description>The duration (in hours) the field held the before value</description>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__End_Datetime__c</fullName>
        <description>The datetime when the field acquired the after value</description>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <label>Cycle Time Field Data</label>
    <nameField>
        <displayFormat>CTFD-{00000000}</displayFormat>
        <label>CT Field Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Time Field Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>